--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,32 +5,25 @@ on:
   pull_request:
 
 jobs:
-  run-tests:
+  test:
+    runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [windows-latest]
-        python-version:
-          - "3.10"
-          # - "3.11"
-          # - "3.12-dev"
-          # - "pypy-3.8"
-
-    name: Test
-    runs-on: ${{ matrix.os }}
+        python-version: [3.8]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - name: set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run tests
         run: pytest
